# slr-parser

./: CMakeLists.txt  README.md
include/: grammar.hpp  lexer.hpp  lr0.hpp  parser.hpp  slr_table.hpp  token.hpp
src/: grammar.cpp  lexer.cpp  lexer.l  lr0.cpp  main.cpp  parser.cpp  slr_table.cpp
tests/: tests.cpp
